# Silence

./: .clang-format  Readme.md  main.py
Client/: CMakeLists.txt  Readme.md  buildinfo.txt  conanfile.txt  events.txt
Client/app/: CMakeLists.txt  main.cpp
Client/include/: BaseClient.h  Client.h  IOClient.h
Client/include/core/: IOClient.h  Util.h
Client/include/core/linux/: Screenshot.h  System.h
Client/include/core/windows/: Screenshot.h  System.h
Client/src/: BaseClient.cpp  CMakeLists.txt  Client.cpp  IOClient.cpp
Client/src/core/: CMakeLists.txt  IOClient.cpp  Util.cpp
Client/src/core/linux/: CMakeLists.txt  Screenshot.cpp  System.cpp
Client/src/core/windows/: CMakeLists.txt  Screenshot.cpp  System.cpp
Server/: index.js  package-lock.json  package.json
Server/panel/: index.html
Shell/: AdminShell.py  Shell.py  main.py
